// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scatter 1`] = `
{
  "annotation": {},
  "chartType": "scatter",
  "config": {
    "scatter": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "scatter": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "Jan-2019-profit",
      "__Dim_Color__": "Jan-2019-profit",
      "__Dim_Detail__": "Jan-2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.5,
      "__MeaYValue__": 10000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jan-2019-discount",
        "__Dim_Color__": "Jan-2019-discount",
        "__Dim_Detail__": "Jan-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "discount": 0.5,
      "month": "Jan",
      "profit": 10000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jan-2019-sales",
      "__Dim_Color__": "Jan-2019-sales",
      "__Dim_Detail__": "Jan-2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.5,
      "__MeaYValue__": 200000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jan-2019-discount",
        "__Dim_Color__": "Jan-2019-discount",
        "__Dim_Detail__": "Jan-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "discount": 0.5,
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Feb-2019-profit",
      "__Dim_Color__": "Feb-2019-profit",
      "__Dim_Detail__": "Feb-2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 20000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Feb-2019-discount",
        "__Dim_Color__": "Feb-2019-discount",
        "__Dim_Detail__": "Feb-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Feb",
      "profit": 20000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Feb-2019-sales",
      "__Dim_Color__": "Feb-2019-sales",
      "__Dim_Detail__": "Feb-2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 400000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Feb-2019-discount",
        "__Dim_Color__": "Feb-2019-discount",
        "__Dim_Detail__": "Feb-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Mar-2019-profit",
      "__Dim_Color__": "Mar-2019-profit",
      "__Dim_Detail__": "Mar-2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.4,
      "__MeaYValue__": 30000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Mar-2019-discount",
        "__Dim_Color__": "Mar-2019-discount",
        "__Dim_Detail__": "Mar-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Mar",
      "profit": 30000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Mar-2019-sales",
      "__Dim_Color__": "Mar-2019-sales",
      "__Dim_Detail__": "Mar-2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.4,
      "__MeaYValue__": 600000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Mar-2019-discount",
        "__Dim_Color__": "Mar-2019-discount",
        "__Dim_Detail__": "Mar-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Apr-2019-profit",
      "__Dim_Color__": "Apr-2019-profit",
      "__Dim_Detail__": "Apr-2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 40000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Apr-2019-discount",
        "__Dim_Color__": "Apr-2019-discount",
        "__Dim_Detail__": "Apr-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Apr",
      "profit": 40000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Apr-2019-sales",
      "__Dim_Color__": "Apr-2019-sales",
      "__Dim_Detail__": "Apr-2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 800000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Apr-2019-discount",
        "__Dim_Color__": "Apr-2019-discount",
        "__Dim_Detail__": "Apr-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "May-2019-profit",
      "__Dim_Color__": "May-2019-profit",
      "__Dim_Detail__": "May-2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.05,
      "__MeaYValue__": 50000,
      "__OriginalData__": {
        "__Dim_ColorId__": "May-2019-discount",
        "__Dim_Color__": "May-2019-discount",
        "__Dim_Detail__": "May-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "discount": 0.05,
      "month": "May",
      "profit": 50000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "May-2019-sales",
      "__Dim_Color__": "May-2019-sales",
      "__Dim_Detail__": "May-2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.05,
      "__MeaYValue__": 1000000,
      "__OriginalData__": {
        "__Dim_ColorId__": "May-2019-discount",
        "__Dim_Color__": "May-2019-discount",
        "__Dim_Detail__": "May-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "discount": 0.05,
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jun-2019-profit",
      "__Dim_Color__": "Jun-2019-profit",
      "__Dim_Detail__": "Jun-2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.3,
      "__MeaYValue__": 60000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jun-2019-discount",
        "__Dim_Color__": "Jun-2019-discount",
        "__Dim_Detail__": "Jun-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Jun",
      "profit": 60000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jun-2019-sales",
      "__Dim_Color__": "Jun-2019-sales",
      "__Dim_Detail__": "Jun-2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.3,
      "__MeaYValue__": 1200000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jun-2019-discount",
        "__Dim_Color__": "Jun-2019-discount",
        "__Dim_Detail__": "Jun-2019-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Jan-2020-profit",
      "__Dim_Color__": "Jan-2020-profit",
      "__Dim_Detail__": "Jan-2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.5,
      "__MeaYValue__": 10000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jan-2020-discount",
        "__Dim_Color__": "Jan-2020-discount",
        "__Dim_Detail__": "Jan-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "discount": 0.5,
      "month": "Jan",
      "profit": 10000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jan-2020-sales",
      "__Dim_Color__": "Jan-2020-sales",
      "__Dim_Detail__": "Jan-2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.5,
      "__MeaYValue__": 200000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jan-2020-discount",
        "__Dim_Color__": "Jan-2020-discount",
        "__Dim_Detail__": "Jan-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "discount": 0.5,
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Feb-2020-profit",
      "__Dim_Color__": "Feb-2020-profit",
      "__Dim_Detail__": "Feb-2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 20000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Feb-2020-discount",
        "__Dim_Color__": "Feb-2020-discount",
        "__Dim_Detail__": "Feb-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Feb",
      "profit": 20000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Feb-2020-sales",
      "__Dim_Color__": "Feb-2020-sales",
      "__Dim_Detail__": "Feb-2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 400000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Feb-2020-discount",
        "__Dim_Color__": "Feb-2020-discount",
        "__Dim_Detail__": "Feb-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Mar-2020-profit",
      "__Dim_Color__": "Mar-2020-profit",
      "__Dim_Detail__": "Mar-2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.4,
      "__MeaYValue__": 30000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Mar-2020-discount",
        "__Dim_Color__": "Mar-2020-discount",
        "__Dim_Detail__": "Mar-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Mar",
      "profit": 30000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Mar-2020-sales",
      "__Dim_Color__": "Mar-2020-sales",
      "__Dim_Detail__": "Mar-2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.4,
      "__MeaYValue__": 600000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Mar-2020-discount",
        "__Dim_Color__": "Mar-2020-discount",
        "__Dim_Detail__": "Mar-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Apr-2020-profit",
      "__Dim_Color__": "Apr-2020-profit",
      "__Dim_Detail__": "Apr-2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 40000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Apr-2020-discount",
        "__Dim_Color__": "Apr-2020-discount",
        "__Dim_Detail__": "Apr-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Apr",
      "profit": 40000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Apr-2020-sales",
      "__Dim_Color__": "Apr-2020-sales",
      "__Dim_Detail__": "Apr-2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.2,
      "__MeaYValue__": 800000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Apr-2020-discount",
        "__Dim_Color__": "Apr-2020-discount",
        "__Dim_Detail__": "Apr-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "May-2020-profit",
      "__Dim_Color__": "May-2020-profit",
      "__Dim_Detail__": "May-2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.05,
      "__MeaYValue__": 50000,
      "__OriginalData__": {
        "__Dim_ColorId__": "May-2020-discount",
        "__Dim_Color__": "May-2020-discount",
        "__Dim_Detail__": "May-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "discount": 0.05,
      "month": "May",
      "profit": 50000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "May-2020-sales",
      "__Dim_Color__": "May-2020-sales",
      "__Dim_Detail__": "May-2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.05,
      "__MeaYValue__": 1000000,
      "__OriginalData__": {
        "__Dim_ColorId__": "May-2020-discount",
        "__Dim_Color__": "May-2020-discount",
        "__Dim_Detail__": "May-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "discount": 0.05,
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jun-2020-profit",
      "__Dim_Color__": "Jun-2020-profit",
      "__Dim_Detail__": "Jun-2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaXValue__": 0.3,
      "__MeaYValue__": 60000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jun-2020-discount",
        "__Dim_Color__": "Jun-2020-discount",
        "__Dim_Detail__": "Jun-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Jun",
      "profit": 60000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Jun-2020-sales",
      "__Dim_Color__": "Jun-2020-sales",
      "__Dim_Detail__": "Jun-2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaXValue__": 0.3,
      "__MeaYValue__": 1200000,
      "__OriginalData__": {
        "__Dim_ColorId__": "Jun-2020-discount",
        "__Dim_Color__": "Jun-2020-discount",
        "__Dim_Detail__": "Jun-2020-discount",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaXValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "discount": undefined,
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          0.05,
          1,
        ],
        "measureValue": "__MeaXValue__",
      },
      "foldInfoList": [
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "discount": undefined,
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            0.05,
            1,
          ],
          "measureValue": "__MeaXValue__",
        },
        {
          "colorRange": [
            0,
            1,
          ],
          "foldMap": {
            "profit": undefined,
            "sales": undefined,
          },
          "measureId": "__MeaId__",
          "measureName": "__MeaName__",
          "measureRange": [
            10000,
            1200000,
          ],
          "measureValue": "__MeaYValue__",
        },
      ],
      "id": "scatter",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "Apr-2019-discount": "Apr-2019-discount",
          "Apr-2019-profit": "Apr-2019-profit",
          "Apr-2019-sales": "Apr-2019-sales",
          "Apr-2020-discount": "Apr-2020-discount",
          "Apr-2020-profit": "Apr-2020-profit",
          "Apr-2020-sales": "Apr-2020-sales",
          "Feb-2019-discount": "Feb-2019-discount",
          "Feb-2019-profit": "Feb-2019-profit",
          "Feb-2019-sales": "Feb-2019-sales",
          "Feb-2020-discount": "Feb-2020-discount",
          "Feb-2020-profit": "Feb-2020-profit",
          "Feb-2020-sales": "Feb-2020-sales",
          "Jan-2019-discount": "Jan-2019-discount",
          "Jan-2019-profit": "Jan-2019-profit",
          "Jan-2019-sales": "Jan-2019-sales",
          "Jan-2020-discount": "Jan-2020-discount",
          "Jan-2020-profit": "Jan-2020-profit",
          "Jan-2020-sales": "Jan-2020-sales",
          "Jun-2019-discount": "Jun-2019-discount",
          "Jun-2019-profit": "Jun-2019-profit",
          "Jun-2019-sales": "Jun-2019-sales",
          "Jun-2020-discount": "Jun-2020-discount",
          "Jun-2020-profit": "Jun-2020-profit",
          "Jun-2020-sales": "Jun-2020-sales",
          "Mar-2019-discount": "Mar-2019-discount",
          "Mar-2019-profit": "Mar-2019-profit",
          "Mar-2019-sales": "Mar-2019-sales",
          "Mar-2020-discount": "Mar-2020-discount",
          "Mar-2020-profit": "Mar-2020-profit",
          "Mar-2020-sales": "Mar-2020-sales",
          "May-2019-discount": "May-2019-discount",
          "May-2019-profit": "May-2019-profit",
          "May-2019-sales": "May-2019-sales",
          "May-2020-discount": "May-2020-discount",
          "May-2020-profit": "May-2020-profit",
          "May-2020-sales": "May-2020-sales",
        },
        "colorItems": [
          "Jan-2019-discount",
          "Feb-2019-discount",
          "Mar-2019-discount",
          "Apr-2019-discount",
          "May-2019-discount",
          "Jun-2019-discount",
          "Jan-2020-discount",
          "Feb-2020-discount",
          "Mar-2020-discount",
          "Apr-2020-discount",
          "May-2020-discount",
          "Jun-2020-discount",
          "Jan-2019-profit",
          "Jan-2019-sales",
          "Feb-2019-profit",
          "Feb-2019-sales",
          "Mar-2019-profit",
          "Mar-2019-sales",
          "Apr-2019-profit",
          "Apr-2019-sales",
          "May-2019-profit",
          "May-2019-sales",
          "Jun-2019-profit",
          "Jun-2019-sales",
          "Jan-2020-profit",
          "Jan-2020-sales",
          "Feb-2020-profit",
          "Feb-2020-sales",
          "Mar-2020-profit",
          "Mar-2020-sales",
          "Apr-2020-profit",
          "Apr-2020-sales",
          "May-2020-profit",
          "May-2020-sales",
          "Jun-2020-profit",
          "Jun-2020-sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "Year",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "year",
      "month",
      "__MeaName__",
    ],
    "detail": [
      "year",
      "month",
      "__MeaName__",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "discount",
      "children": [
        {
          "id": "discount",
        },
      ],
      "id": "0-x",
    },
    {
      "alias": "profit,sales",
      "children": [
        {
          "id": "profit",
        },
        {
          "id": "sales",
        },
      ],
      "id": "0-y",
    },
  ],
}
`;

exports[`scatter 2`] = `
{
  "animation": true,
  "axes": [
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "right": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "bottom",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "Jan-2019-discount",
      "Feb-2019-discount",
      "Mar-2019-discount",
      "Apr-2019-discount",
      "May-2019-discount",
      "Jun-2019-discount",
      "Jan-2020-discount",
      "Feb-2020-discount",
      "Mar-2020-discount",
      "Apr-2020-discount",
      "May-2020-discount",
      "Jun-2020-discount",
      "Jan-2019-profit",
      "Jan-2019-sales",
      "Feb-2019-profit",
      "Feb-2019-sales",
      "Mar-2019-profit",
      "Mar-2019-sales",
      "Apr-2019-profit",
      "Apr-2019-sales",
      "May-2019-profit",
      "May-2019-sales",
      "Jun-2019-profit",
      "Jun-2019-sales",
      "Jan-2020-profit",
      "Jan-2020-sales",
      "Feb-2020-profit",
      "Feb-2020-sales",
      "Mar-2020-profit",
      "Mar-2020-sales",
      "Apr-2020-profit",
      "Apr-2020-sales",
      "May-2020-profit",
      "May-2020-sales",
      "Jun-2020-profit",
      "Jun-2020-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
    "yField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {},
    "id": "scatter",
    "values": [
      {
        "__Dim_ColorId__": "Jan-2019-profit",
        "__Dim_Color__": "Jan-2019-profit",
        "__Dim_Detail__": "Jan-2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.5,
        "__MeaYValue__": 10000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jan-2019-discount",
          "__Dim_Color__": "Jan-2019-discount",
          "__Dim_Detail__": "Jan-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.5,
          "__OriginalData__": {
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "sales": 200000,
            "year": "2019",
          },
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jan-2019-sales",
        "__Dim_Color__": "Jan-2019-sales",
        "__Dim_Detail__": "Jan-2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.5,
        "__MeaYValue__": 200000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jan-2019-discount",
          "__Dim_Color__": "Jan-2019-discount",
          "__Dim_Detail__": "Jan-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.5,
          "__OriginalData__": {
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "sales": 200000,
            "year": "2019",
          },
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Feb-2019-profit",
        "__Dim_Color__": "Feb-2019-profit",
        "__Dim_Detail__": "Feb-2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 20000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Feb-2019-discount",
          "__Dim_Color__": "Feb-2019-discount",
          "__Dim_Detail__": "Feb-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "sales": 400000,
            "year": "2019",
          },
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Feb-2019-sales",
        "__Dim_Color__": "Feb-2019-sales",
        "__Dim_Detail__": "Feb-2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 400000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Feb-2019-discount",
          "__Dim_Color__": "Feb-2019-discount",
          "__Dim_Detail__": "Feb-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "sales": 400000,
            "year": "2019",
          },
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Mar-2019-profit",
        "__Dim_Color__": "Mar-2019-profit",
        "__Dim_Detail__": "Mar-2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.4,
        "__MeaYValue__": 30000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Mar-2019-discount",
          "__Dim_Color__": "Mar-2019-discount",
          "__Dim_Detail__": "Mar-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.4,
          "__OriginalData__": {
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "sales": 600000,
            "year": "2019",
          },
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Mar-2019-sales",
        "__Dim_Color__": "Mar-2019-sales",
        "__Dim_Detail__": "Mar-2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.4,
        "__MeaYValue__": 600000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Mar-2019-discount",
          "__Dim_Color__": "Mar-2019-discount",
          "__Dim_Detail__": "Mar-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.4,
          "__OriginalData__": {
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "sales": 600000,
            "year": "2019",
          },
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Apr-2019-profit",
        "__Dim_Color__": "Apr-2019-profit",
        "__Dim_Detail__": "Apr-2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 40000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Apr-2019-discount",
          "__Dim_Color__": "Apr-2019-discount",
          "__Dim_Detail__": "Apr-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "sales": 800000,
            "year": "2019",
          },
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Apr-2019-sales",
        "__Dim_Color__": "Apr-2019-sales",
        "__Dim_Detail__": "Apr-2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 800000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Apr-2019-discount",
          "__Dim_Color__": "Apr-2019-discount",
          "__Dim_Detail__": "Apr-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "sales": 800000,
            "year": "2019",
          },
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "May-2019-profit",
        "__Dim_Color__": "May-2019-profit",
        "__Dim_Detail__": "May-2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.05,
        "__MeaYValue__": 50000,
        "__OriginalData__": {
          "__Dim_ColorId__": "May-2019-discount",
          "__Dim_Color__": "May-2019-discount",
          "__Dim_Detail__": "May-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.05,
          "__OriginalData__": {
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "sales": 1000000,
            "year": "2019",
          },
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "May-2019-sales",
        "__Dim_Color__": "May-2019-sales",
        "__Dim_Detail__": "May-2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.05,
        "__MeaYValue__": 1000000,
        "__OriginalData__": {
          "__Dim_ColorId__": "May-2019-discount",
          "__Dim_Color__": "May-2019-discount",
          "__Dim_Detail__": "May-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.05,
          "__OriginalData__": {
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "sales": 1000000,
            "year": "2019",
          },
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jun-2019-profit",
        "__Dim_Color__": "Jun-2019-profit",
        "__Dim_Detail__": "Jun-2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.3,
        "__MeaYValue__": 60000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jun-2019-discount",
          "__Dim_Color__": "Jun-2019-discount",
          "__Dim_Detail__": "Jun-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.3,
          "__OriginalData__": {
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "sales": 1200000,
            "year": "2019",
          },
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jun-2019-sales",
        "__Dim_Color__": "Jun-2019-sales",
        "__Dim_Detail__": "Jun-2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.3,
        "__MeaYValue__": 1200000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jun-2019-discount",
          "__Dim_Color__": "Jun-2019-discount",
          "__Dim_Detail__": "Jun-2019-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.3,
          "__OriginalData__": {
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "sales": 1200000,
            "year": "2019",
          },
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Jan-2020-profit",
        "__Dim_Color__": "Jan-2020-profit",
        "__Dim_Detail__": "Jan-2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.5,
        "__MeaYValue__": 10000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jan-2020-discount",
          "__Dim_Color__": "Jan-2020-discount",
          "__Dim_Detail__": "Jan-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.5,
          "__OriginalData__": {
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "sales": 200000,
            "year": "2020",
          },
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jan-2020-sales",
        "__Dim_Color__": "Jan-2020-sales",
        "__Dim_Detail__": "Jan-2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.5,
        "__MeaYValue__": 200000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jan-2020-discount",
          "__Dim_Color__": "Jan-2020-discount",
          "__Dim_Detail__": "Jan-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.5,
          "__OriginalData__": {
            "discount": 0.5,
            "month": "Jan",
            "profit": 10000,
            "sales": 200000,
            "year": "2020",
          },
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Feb-2020-profit",
        "__Dim_Color__": "Feb-2020-profit",
        "__Dim_Detail__": "Feb-2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 20000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Feb-2020-discount",
          "__Dim_Color__": "Feb-2020-discount",
          "__Dim_Detail__": "Feb-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "sales": 400000,
            "year": "2020",
          },
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Feb-2020-sales",
        "__Dim_Color__": "Feb-2020-sales",
        "__Dim_Detail__": "Feb-2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 400000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Feb-2020-discount",
          "__Dim_Color__": "Feb-2020-discount",
          "__Dim_Detail__": "Feb-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Feb",
            "profit": 20000,
            "sales": 400000,
            "year": "2020",
          },
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Mar-2020-profit",
        "__Dim_Color__": "Mar-2020-profit",
        "__Dim_Detail__": "Mar-2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.4,
        "__MeaYValue__": 30000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Mar-2020-discount",
          "__Dim_Color__": "Mar-2020-discount",
          "__Dim_Detail__": "Mar-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.4,
          "__OriginalData__": {
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "sales": 600000,
            "year": "2020",
          },
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Mar-2020-sales",
        "__Dim_Color__": "Mar-2020-sales",
        "__Dim_Detail__": "Mar-2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.4,
        "__MeaYValue__": 600000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Mar-2020-discount",
          "__Dim_Color__": "Mar-2020-discount",
          "__Dim_Detail__": "Mar-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.4,
          "__OriginalData__": {
            "discount": 0.4,
            "month": "Mar",
            "profit": 30000,
            "sales": 600000,
            "year": "2020",
          },
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Apr-2020-profit",
        "__Dim_Color__": "Apr-2020-profit",
        "__Dim_Detail__": "Apr-2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 40000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Apr-2020-discount",
          "__Dim_Color__": "Apr-2020-discount",
          "__Dim_Detail__": "Apr-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "sales": 800000,
            "year": "2020",
          },
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Apr-2020-sales",
        "__Dim_Color__": "Apr-2020-sales",
        "__Dim_Detail__": "Apr-2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.2,
        "__MeaYValue__": 800000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Apr-2020-discount",
          "__Dim_Color__": "Apr-2020-discount",
          "__Dim_Detail__": "Apr-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.2,
          "__OriginalData__": {
            "discount": 0.2,
            "month": "Apr",
            "profit": 40000,
            "sales": 800000,
            "year": "2020",
          },
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "May-2020-profit",
        "__Dim_Color__": "May-2020-profit",
        "__Dim_Detail__": "May-2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.05,
        "__MeaYValue__": 50000,
        "__OriginalData__": {
          "__Dim_ColorId__": "May-2020-discount",
          "__Dim_Color__": "May-2020-discount",
          "__Dim_Detail__": "May-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.05,
          "__OriginalData__": {
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "sales": 1000000,
            "year": "2020",
          },
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "May-2020-sales",
        "__Dim_Color__": "May-2020-sales",
        "__Dim_Detail__": "May-2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.05,
        "__MeaYValue__": 1000000,
        "__OriginalData__": {
          "__Dim_ColorId__": "May-2020-discount",
          "__Dim_Color__": "May-2020-discount",
          "__Dim_Detail__": "May-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.05,
          "__OriginalData__": {
            "discount": 0.05,
            "month": "May",
            "profit": 50000,
            "sales": 1000000,
            "year": "2020",
          },
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jun-2020-profit",
        "__Dim_Color__": "Jun-2020-profit",
        "__Dim_Detail__": "Jun-2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaXValue__": 0.3,
        "__MeaYValue__": 60000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jun-2020-discount",
          "__Dim_Color__": "Jun-2020-discount",
          "__Dim_Detail__": "Jun-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.3,
          "__OriginalData__": {
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "sales": 1200000,
            "year": "2020",
          },
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Jun-2020-sales",
        "__Dim_Color__": "Jun-2020-sales",
        "__Dim_Detail__": "Jun-2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaXValue__": 0.3,
        "__MeaYValue__": 1200000,
        "__OriginalData__": {
          "__Dim_ColorId__": "Jun-2020-discount",
          "__Dim_Color__": "Jun-2020-discount",
          "__Dim_Detail__": "Jun-2020-discount",
          "__MeaId__": "discount",
          "__MeaName__": "discount",
          "__MeaXValue__": 0.3,
          "__OriginalData__": {
            "discount": 0.3,
            "month": "Jun",
            "profit": 60000,
            "sales": 1200000,
            "year": "2020",
          },
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
        "scaleX": 1.4,
        "scaleY": 1.4,
        "stroke": [Function],
      },
    },
    "style": {},
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "scatter",
  "xField": "__MeaXValue__",
  "yField": "__MeaYValue__",
}
`;
